<resources>
    <string name="app_name">YouChating</string>

    <!--Login's strings -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_do_not_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="login_register_with_youchating">Register with YouChating</string>
    <string name="login_forgotten_password">Forgotten password?</string>
    <string name="login_sign_in">Sign In</string>
    <string name="user_registration_password">Password</string>
    <string name="user_registration_create_account">Create Account</string>
    <string name="user_registration_email">Email</string>
    <string name="user_registration_name">Name</string>
    <string name="user_registration_facebook">Facebook</string>
    <string name="user_registration_google">Google</string>


</resources>