<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".view.LoginActivity">

    <EditText
        android:id="@+id/edit_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="true"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/edit_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="true"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_login_email" />

    <TextView
        android:id="@+id/text_login_forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_forgotten_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_login_password"
        />

    <Button
        android:id="@+id/button_login_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:layout_constraintTop_toBottomOf="@id/text_login_forgotten_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_sign_in"
        />

    <TextView
        android:id="@+id/text_login_non_subscriber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_do_not_have_an_account_yet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login_sign_in"
        app:layout_constraintEnd_toStartOf="@id/text_register_with_youchating"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/text_register_with_youchating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/text_login_non_subscriber"
        app:layout_constraintTop_toTopOf="@id/text_login_non_subscriber"
        app:layout_constraintBottom_toBottomOf="@id/text_login_non_subscriber"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_register_with_youchating"
        />

</androidx.constraintlayout.widget.ConstraintLayout>